--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -18,12 +18,14 @@
     font-weight: normal;
     font-style: normal;
   }
+
   @font-face {
     font-family: 'Plus Jakarta Sans';
     src: url('./fonts/PlusJakartaSansItalicVF.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
   }
+
   /* SERIF: MERRIWEATHER */
   @font-face {
     font-family: 'Merriweather';
@@ -31,51 +33,56 @@
     font-weight: bolder;
     font-style: normal;
   }
+
   @font-face {
     font-family: 'Merriweather';
     src: url('./fonts/Merriweather/Merriweather-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
   }
+
   @font-face {
     font-family: 'Merriweather';
     src: url('./fonts/Merriweather/Merriweather-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
   }
+
   @font-face {
     font-family: 'Merriweather';
     src: url('./fonts/Merriweather/Merriweather-Light.ttf') format('truetype');
     font-weight: lighter;
     font-style: normal;
   }
+
   @font-face {
     font-family: 'Merriweather';
-    src: url('./fonts/Merriweather/Merriweather-BlackItalic.ttf')
-      format('truetype');
+    src: url('./fonts/Merriweather/Merriweather-BlackItalic.ttf') format('truetype');
     font-weight: bolder;
     font-style: italic;
   }
+
   @font-face {
     font-family: 'Merriweather';
-    src: url('./fonts/Merriweather/Merriweather-BoldItalic.ttf')
-      format('truetype');
+    src: url('./fonts/Merriweather/Merriweather-BoldItalic.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
   }
+
   @font-face {
     font-family: 'Merriweather';
     src: url('./fonts/Merriweather/Merriweather-Italic.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
   }
+
   @font-face {
     font-family: 'Merriweather';
-    src: url('./fonts/Merriweather/Merriweather-LightItalic.ttf')
-      format('truetype');
+    src: url('./fonts/Merriweather/Merriweather-LightItalic.ttf') format('truetype');
     font-weight: lighter;
     font-style: italic;
   }
+
   /* MONO: JET BRAINS MONO */
   @font-face {
     font-family: 'JetBrains Mono';
@@ -83,6 +90,7 @@
     font-weight: normal;
     font-style: normal;
   }
+
   @font-face {
     font-family: 'JetBrains Mono';
     src: url('./fonts/JetBrainsMonoItalicVF.ttf') format('truetype');
@@ -99,5 +107,19 @@
 @layer base {
   :root {
     --radius: 0.5rem;
+  }
+}
+
+/*** animations ***/
+
+@keyframes scroll {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-200px); /* Negative half of background height */
+  }
+  100% {
+    transform: translateY(0px); /* Negative half of background height */
   }
 }
